src/test/deca/context/invalid/created/return/return_bool_void.deca
// Description :
//    return mauvais type : void, demandé bool
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
boolean met(){
}
}